fix: nav bar is fully visible on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,12 +68,11 @@ section {
 /* ---- Module Rules ---- */
 
 /* Navigation Styles*/
-.hide__nav {
-    display: none !important;
-    transition: ease 0.3s all;
-}
+
 
 .navbar__menu ul {
+    display: flex;
+    flex-wrap: wrap;
     padding-left: 0;
     margin: 0;
     text-align: right;
